# smurl

./: CMakeLists.txt  Dockerfile  Dockerfile.run  README.md  rules.json
.github/workflows/: build-and-test.yml
IoC/: IResolverCollection.h  IResolverContainer.h  IScope.h  IScopeChanger.h  IoC.cpp  IoC.h  IocNewScopeCommand.cpp  IocNewScopeCommand.h  IocRegisterCommand.cpp  IocRegisterCommand.h  IocSetScopeAbsoluteCommand.cpp  IocSetScopeAbsoluteCommand.h  IocSetScopeRelativeCommand.cpp  IocSetScopeRelativeCommand.h  ResolverCollection.cpp  ResolverCollection.h  ResolverContainer.h  Scope.cpp  Scope.h  ScopeChangerAdapter.cpp  ScopeChangerAdapter.h  ScopeContainer.cpp  ScopeContainer.h
IoC.test/: CMakeLists.txt  IoC_test.cpp  IocNewScopeCommand_test.cpp  IocRegisterCommand_test.cpp  IocSetScopeAbsoluteCommand_test.cpp  IocSetScopeRelativeCommand_test.cpp
IoC.test/mock/: IResolverContainer_mock.h  IScopeChanger_mock.h  IScope_mock.h
commands/: FallbackCommand.cpp  FallbackCommand.h  MacroCommand.cpp  MacroCommand.h  PrintJsonObjectCommand.cpp  PrintJsonObjectCommand.h
commands.test/: CMakeLists.txt  FallbackCommand_test.cpp  MacroCommand_test.cpp
endpoint/: DirectCommandExecutor.cpp  DirectCommandExecutor.h  Endpoint.cpp  Endpoint.h  IMessageQueue.h
exceptions/: CommandException.cpp  CommandException.h  InvalidArgument.cpp  InvalidArgument.h  RuntimeError.cpp  RuntimeError.h
httpsvr/: BadRequestHandler.cpp  BadRequestHandler.h  BeforeCondition.cpp  CMakeLists.txt  CheckConditionCommand.cpp  CheckConditionCommand.h  Condition.cpp  Condition.h  DeleteCommand.cpp  DeleteCommand.h  DeleteHttpRequestCommand.cpp  DeleteHttpRequestCommand.h  DirectCommandExecutor.cpp  Endpoint.cpp  GetHandler.cpp  GetHandler.h  HttpBadRequestCommand.cpp  HttpBadRequestCommand.h  HttpClientInfo.cpp  HttpClientInfo.h  HttpGetHandler.cpp  HttpGetHandler.h  HttpNotAllowedCommand.cpp  HttpNotAllowedCommand.h  HttpRedirectCommand.cpp  HttpRedirectCommand.h  HttpRequest.cpp  HttpRequest.h  HttpRequestAcceptingObject.cpp  HttpRequestAcceptingObject.h  HttpRequestAcceptor.cpp  HttpRequestAcceptor.h  HttpRequestDeletingObject.cpp  HttpRequestDeletingObject.h  HttpRequestHandler.cpp  HttpRequestHandler.h  HttpRequestHandlerChain.cpp  HttpRequestHandlerChain.h  HttpRequestHandlerTemplate.cpp  HttpRequestHandlerTemplate.h  (+43 more)
interface/: ICommand.h  IException.h  IOutputCommandStream.h
interface.mock/: ICommand_mock.h  IException_mock.h
redirector/: CMakeLists.txt  CheckConditionCommand.h  DeleteRequestCommand.cpp  DeleteRequestCommand.h  FindRequestRulesCommand.cpp  FindRequestRulesCommand.h  IResponseSender.h  IRules.h  IRulesObject.h  InitializeCommand.cpp  InitializeCommand.h  JsonFile.cpp  JsonFile.h  PluginCondition.cpp  PluginCondition.h  RequestJsonObject.cpp  RequestJsonObject.h  RequestRulesObject.cpp  RequestRulesObject.h  SendResponseCommand.cpp  SendResponseCommand.h  UdpRequestAcceptor.cpp  UdpRequestAcceptor.h  UdpRequestData.cpp  UdpRequestData.h  UdpResponseSender.cpp  UdpResponseSender.h  main.cpp  rules.json
redirector/plugins/: CMakeLists.txt
redirector/plugins/before/: BeforeCondition.cpp  BeforeCondition.h  CMakeLists.txt  main.cpp
redirector/plugins/browser/: BrowserCondition.cpp  BrowserCondition.h  CMakeLists.txt  main.cpp
